tests/ui/associated-inherent-types/unsatisfied-bounds-where-clause-on-assoc-ty.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/unsatisfied-bounds-where-clause-on-assoc-ty.rs:13:12
   |
LL |     let _: S::<String>::X;
   |            ^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `String`
   |
note: required by a bound in `S<T>::X`
  --> $DIR/unsatisfied-bounds-where-clause-on-assoc-ty.rs:9:12
   |
LL |     type X = ()
   |          - required by a bound in this associated type
LL |     where
LL |         T: Copy;
   |            ^^^^ required by this bound in `S<T>::X`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
